# misc

./: README.md
3DViewPy/: README.md
3DViewPy/src/renderer/: camera.py
arcade/: README.md  main.py
arcade/set/: todo.txt
arcade/set_programe/: Coin_icon.py  GameManager.py  MalusCoins.py  Player.py  apple.py  arrow.py  bomb.py  button.py  coins.py  dl_image.py
blog-creator/: .gitignore  Cargo.toml
blog-creator/src/: command.rs  ide.rs  main.rs
blog-creator/website/: main.html  server.js
blog-creator/website/articles/: Randomness  Randomness.html
blog-creator/website/data/: articles.json  data.json
blog-creator/website/index/: aboutme.html
blog-creator/website/js/: articles.js  name.js
javaScript-web-server/: Dockerfile  README.md  main.js  package-lock.json  package.json
javaScript-web-server/routes/: adminRoute.js  articleRoute.js  dataRoute.js  imageRoute.js  mainRoute.js
javaScript-web-server/routes/admin/: admin.html  check_msg.html  new_article.html
javaScript-web-server/routes/webpage/: about_me.html  articles.html  main.html  page_not_found.html  photo.html  style.css
linked-list/: README.md
linked-list/src/: lib.rs
quine/python/: main.py
quine/rust/: Cargo.toml
quine/rust/src/: main.rs
shooters/: README.md  idée pour le jeux.txt  jeux_Beta_1.py  test.py
simple-chat-website/: package-lock.json  package.json
