[package]
name = "blog-creator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clear_screen = "0.1.0"
crossterm = "0.27.0"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"

